--- a/index.html
+++ b/index.html
@@ -1,134 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Homework 3</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Modernist</title>
+    <link href="styles/styles.css" type="text/css" rel="stylesheet">
 </head>
-
 <body>
-<header class="header">
-    <div class="header-content">
-        <div class="logo"><p><b>BR </b>Architects</p></div>
-        <ul class="menu">
-            <li class="menu-item"><a href="#projectsID">Projects</a></li>
-            <li class="menu-item"><a href="#aboutID">About</a></li>
-            <li class="menu-item"><a href="#contactID">Contacts</a></li>
 
+
+<header>
+    <div class="logo">
+        <a href="#home" id="home">
+            <p>The Modernist</p>
+            <p class="under-logo">Free PSD Website Template</p>
+        </a>
+    </div>
+
+    <div class="navigation-bar body-max">
+    <nav>
+        <ul class="navigation-list">
+            <li><a href="#projects">HOME</a></li>
+            <li><a href="#about">STYLE DEMO</a></li>
+            <li><a href="#team">FULL WIDTH</a></li>
+            <li><a href="#dropdown">DROPDOWN</a></li>
+            <li><a href="#portfolio">PORTFOLIO</a></li>
+            <li><a href="#gallery">GALLERY</a></li>
         </ul>
+    </nav>
     </div>
 </header>
+<main>
+    <section class="slider">
 
-<a href="#" title="Вернуться к началу страницы" class="buttonUp">Go up</a>
+        <div class="my-slider">
+            <div class="text-slider">
+                <p class="title-text-slider">
+                    Cursus penati  saccum nulla.
+                </p>
+                <p class="main-text-slider">
+                    Nullamlacus dui ipsum conseque loborttis non
+                    euisque morbi penas dapibulum orna.
+                    Urnaultrices quis curabitur phasellentesque
+                    congue magnis vestibulum quismodo nulla et
+                    feugiat adipiscinia pellentum leo.
+                </p>
 
-<div class ="content">
-    <section class="logoContent">
-        <section class="frameLogo"><b>BR</b></section>
-        <p>Architects</p>
+                <button class="button-read">
+                    Read More Here >>
+                </button>
+            </div>
+
+            <div class="img-slider">
+                <img src="assets/cat.jpg" alt="">
+            </div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+        </div>
+        </div>
     </section>
 
-    <div class="projects" id="projectsID">
-        <p class="title">Projects</p>
-        <section class="proiect">
-            <div class="proiect1">
-                <span class="textProject">Summer house</span>
-            </div>
-            <div class="proiect2">
-                <span class="textProject">Brick house</span>
-            </div>
-            <div class="proiect3">
-                <span class="textProject">Renovated</span>
-            </div>
-            <div class="proiect4">
-                <span class="textProject">Barn house</span>
-            </div>
-            <div class="proiect5">
-                <span class="textProject">Renovated</span>
-            </div>
-            <div class="proiect6">
-                <span class="textProject">Summer house</span>
-            </div>
-            <div class="proiect7">
-                <span class="textProject">Barn house</span>
-            </div>
-            <div class="proiect8">
-                <span class="textProject">Summer house</span>
-            </div>
-        </section>
-    </div>
-
-    <div class="about" id="aboutID">
-        <p class="title">About</p>
-        <p class="textAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged.
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software
-            like Aldus PageMaker including versions of Lorem Ipsum.
-        </p>
-
-        <section class="aboutTeam">
-            <div>
-                <img src="assets/team2.jpg">
-                <p class="name">John Doe</p>
-                <p class="position">CEO & Founder </p>
-                <p class="textAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <p class="contact">Contact</p>
+    <section class="services">
+        <div class="row-services">
+            <div class="service">
+                <img src="assets/hg.png" alt="">
+                <p class="title-service">SERVICE TITLE</p>
+                <p>Vestassapede et donec ut est libe ros sus et
+                    eget sed eget quisq ueta habitur augue</p>
             </div>
 
-            <div>
-                <img src="assets/team1.jpg">
-                <p class="name">John Doe</p>
-                <p class="position">Architect</p>
-                <p class="textAbout">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                <p class="contact">Contact</p>
+            <div class="service">
+                <img src="assets/sun.png" alt="">
+                <p class="title-service">SERVICE TITLE</p>
+                <p>Vestassapede et donec ut est libe ros sus et
+                    eget sed eget quisq ueta habitur augue</p>
             </div>
 
-            <div>
-                <img src="assets/team3.jpg">
-                <p class="name">Maik Ross</p>
-                <p class="position">Architect</p>
-                <p class="textAbout">It has survived not only five centuries, but also the leap into electronic typesetting.</p>
-                <p class="contact">Contact</p>
+            <div class="service">
+                <img src="assets/atom.svg" alt="">
+                <p class="title-service">SERVICE TITLE</p>
+                <p>Vestassapede et donec ut est libe ros sus et
+                    eget sed eget quisq ueta habitur augue</p>
             </div>
 
-            <div>
-                <img src="assets/team4.jpg">
-                <p class="name">Dan Star</p>
-                <p class="position">Architect</p>
-                <p class="textAbout">When an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <p class="contact">Contact</p>
+            <div class="service">
+                <img src="assets/medal.svg" alt="">
+                <p class="title-service">SERVICE TITLE</p>
+                <p>Vestassapede et donec ut est libe ros sus et
+                    eget sed eget quisq ueta habitur augue</p>
             </div>
 
-        </section>
+        </div>
+    </section>
 
-    </div>
+    <section class="latest-work">
 
-    <div class="contactUs" id="contactID">
-        <p class="title">Contact</p>
-        <p>Lets get in touch and talk about your and our next project</p>
-        <form>
-            <input class="inputContact" type="text" name="name" placeholder="Name">
-            <input class="inputContact" type="text" name="mail" placeholder="E-Mail">
-        </form>
-        <input type="button" value="SEND MESSAGE">
-    </div>
+    </section>
 
-</div>
+    <footer class="footer">
+    </footer>
 
-<div class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11882.579194495233!2d-87.62912710835279!3d41.87898809405096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2cbb24a58c1f%3A0x469c0c8118eb74b2!2z0KfQuNC60LDQs9C-LdCb0YPQvywg0KfQuNC60LDQs9C-LCDQmNC70LvQuNC90L7QudGBLCDQodCo0JA!5e0!3m2!1sru!2sby!4v1611659365022!5m2!1sru!2sby" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</div>
-
-<footer>
-    <div class="footer">
-        <p>Powered by SM<sup>&copy;</sup></p>
-    </div>
-</footer>
-
+</main>
 </body>
 </html>
