--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
             <div class="service">
                 <img src="assets/hg.png" alt="">
                 <p class="title-service">SERVICE TITLE</p>
-                <p>Vestassapede et donec ut est libe ros sus et
+                <p class="main-text-service">Vestassapede et donec ut est libe ros sus et
                     eget sed eget quisq ueta habitur augue</p>
             </div>
 
             <div class="service">
                 <img src="assets/sun.png" alt="">
                 <p class="title-service">SERVICE TITLE</p>
-                <p>Vestassapede et donec ut est libe ros sus et
+                <p class="main-text-service">Vestassapede et donec ut est libe ros sus et
                     eget sed eget quisq ueta habitur augue</p>
             </div>
 
             <div class="service">
                 <img src="assets/atom.svg" alt="">
                 <p class="title-service">SERVICE TITLE</p>
-                <p>Vestassapede et donec ut est libe ros sus et
+                <p class="main-text-service">Vestassapede et donec ut est libe ros sus et
                     eget sed eget quisq ueta habitur augue</p>
             </div>
 
             <div class="service">
                 <img src="assets/medal.svg" alt="">
                 <p class="title-service">SERVICE TITLE</p>
-                <p>Vestassapede et donec ut est libe ros sus et
+                <p class="main-text-service">Vestassapede et donec ut est libe ros sus et
                     eget sed eget quisq ueta habitur augue</p>
             </div>
 
@@ -96,6 +96,42 @@
     </section>
 
     <section class="latest-work">
+
+        <div class="title-latest-work"><a>LATEST WORK</a></div>
+
+        <div class="row-latest-work">
+            <div class="latest">
+                <img src="assets/learn.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+
+            <div class="latest">
+                <img src="assets/car.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+
+            <div class="latest">
+                <img src="assets/architect.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+        </div>
+
+        <div class="row-latest-work">
+            <div class="latest">
+                <img src="assets/gitar.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+
+            <div class="latest">
+                <img src="assets/flamingo.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+
+            <div class="latest">
+                <img src="assets/waterfall.jpg" alt="">
+                <div class="latest-description">IPSUM DOLOR</div>
+            </div>
+        </div>
 
     </section>
 
