--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 
 <header>
+
     <div class="logo">
         <a href="#home" id="home">
             <p>The Modernist</p>
@@ -28,9 +29,10 @@
         </ul>
     </nav>
     </div>
+
 </header>
 <main>
-    <section class="slider">
+    <section class="slider max-wigth">
 
         <div class="my-slider">
             <div class="text-slider">
@@ -58,11 +60,10 @@
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-        </div>
-        </div>
+
     </section>
 
-    <section class="services">
+    <section class="services max-wigth">
         <div class="row-services">
             <div class="service">
                 <img src="assets/hg.png" alt="">
@@ -95,9 +96,9 @@
         </div>
     </section>
 
-    <section class="latest-work">
+    <section class="latest-work max-wigth">
 
-        <div class="title-latest-work"><a>LATEST WORK</a></div>
+        <div class="title-latest-work "><a>LATEST WORK</a></div>
 
         <div class="row-latest-work">
             <div class="latest">
@@ -135,7 +136,80 @@
 
     </section>
 
-    <footer class="footer">
+    <section class="about-us max-wigth">
+        <div class="row-about-us">
+            <div class="about">
+                <p class="title-about">From The Blog</p>
+                <p class="about-p">Post Title</p>
+                <p class="text-admin">
+                    <a class="green-text">Admin, </a>donainname.com
+                </p>
+                <p class="text-admin">Friday, 6th April 2000</p>
+                <p class="text-blog">Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean
+                    elit intesque sed. Facilispede estibulum nulla orna nisl velit elit
+                    ac aliquat non tincidunt. Namjusto cras urna urnaretra
+                    lor urna neque sed quis orci nulla.
+                </p>
+                <button class="button-read">
+                    Read More Here >>
+                </button>
+
+            </div>
+
+            <div class="about">
+                <p class="title-about">Quick Links</p>
+                <ul>
+                    <li>Lorem ipsum dolor sit</li>
+                    <li>Amet consectetur </li>
+                    <li>Praesent vel sem id </li>
+                    <li>Curabitur hendrerit est </li>
+                    <li>Aliquam eget erat nec sapien </li>
+                    <li>Cras id auque nunc </li>
+                    <li>Sed a nulla urna </li>
+                </ul>
+            </div>
+
+            <div class="about">
+                <p class="title-about">Latest Tweets</p>
+                <p>
+                    @namehere Justoid nonummy laoreet phasellent penatoque in antesque
+                    pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut
+                    vitae doloreet 1 day ago
+                </p>
+                <p>
+                    @namehere Justoid nonummy laoreet phasellent penatoque in antesque
+                    pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut
+                    vitae doloreet 1 day ago
+                </p>
+
+            </div>
+
+            <div class="about">
+                <p class="title-about">Contact Us</p>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="column">
+                            <form action="/action_page.php">
+
+                                <input type="text" id="fname" name="firstname" placeholder="Full Mame">
+                                <input type="text" id="mail" name="email" placeholder="Email Address">
+                                <input type="text" id="sub" name="subject" placeholder="Subject">
+
+                                <textarea id="message" name="message" placeholder="Message" style="height:70px"></textarea>
+                                <input type="submit" value="SUBMIT">
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer max-wigth">
+        <div class="copyright">Copyright © 2013 Domain Name - All Rights Reserved</div>
+        <div>Template by OS Templates</div>
     </footer>
 
 </main>
