--- a/index.html
+++ b/index.html
@@ -28,14 +28,31 @@
             <li><a href="#gallery">GALLERY</a></li>
         </ul>
     </nav>
+
+        <input type="checkbox" id="nav-toggle" hidden>
+        <nav class="navi">
+            <label for="nav-toggle" class="nav-toggle" onclick></label>
+            <h2 class="logo">
+                <a href="//www.os-templates.com/free-psd-templates/the-modernist/">HOME</a>
+            </h2>
+            <ul>
+                <li><a href="#projects">HOME</a></li>
+                <li><a href="#about">STYLE DEMO</a></li>
+                <li><a href="#team">FULL WIDTH</a></li>
+                <li><a href="#dropdown">DROPDOWN</a></li>
+                <li><a href="#portfolio">PORTFOLIO</a></li>
+                <li><a href="#gallery">GALLERY</a></li>
+            </ul>
+        </nav>
+
     </div>
 
 </header>
 <main>
     <section class="slider max-wigth">
-
         <div class="my-slider">
             <div class="text-slider">
+                <div class="decription-slider">
                 <p class="title-text-slider">
                     Cursus penati  saccum nulla.
                 </p>
@@ -45,21 +62,24 @@
                     Urnaultrices quis curabitur phasellentesque
                     congue magnis vestibulum quismodo nulla et
                     feugiat adipiscinia pellentum leo.
+
                 </p>
 
                 <button class="button-read">
                     Read More Here >>
                 </button>
-            </div>
 
-            <div class="img-slider">
-                <img src="assets/cat.jpg" alt="">
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             </div>
         </div>
 
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
+            <div class="text-slider">
+                <div class="round">
+                <img class="img-slider" src="assets/cat.jpg" alt="">
+            </div>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+        </div>
 
     </section>
 
@@ -103,34 +123,33 @@
         <div class="row-latest-work">
             <div class="latest">
                 <img src="assets/learn.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
+
             </div>
 
             <div class="latest">
                 <img src="assets/car.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
             </div>
 
             <div class="latest">
                 <img src="assets/architect.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
             </div>
-        </div>
 
-        <div class="row-latest-work">
             <div class="latest">
                 <img src="assets/gitar.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
             </div>
 
             <div class="latest">
                 <img src="assets/flamingo.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
             </div>
 
             <div class="latest">
                 <img src="assets/waterfall.jpg" alt="">
-                <div class="latest-description">IPSUM DOLOR</div>
+                <div class="latest-description"><p>IPSUM DOLOR</p></div>
             </div>
         </div>
 
@@ -150,15 +169,15 @@
                     ac aliquat non tincidunt. Namjusto cras urna urnaretra
                     lor urna neque sed quis orci nulla.
                 </p>
-                <button class="button-read">
-                    Read More Here >>
+                <button class="button-read-about">
+                    Read More >>
                 </button>
 
             </div>
 
             <div class="about">
                 <p class="title-about">Quick Links</p>
-                <ul>
+                <ul class="list-quick">
                     <li>Lorem ipsum dolor sit</li>
                     <li>Amet consectetur </li>
                     <li>Praesent vel sem id </li>
@@ -171,13 +190,13 @@
 
             <div class="about">
                 <p class="title-about">Latest Tweets</p>
-                <p>
-                    @namehere Justoid nonummy laoreet phasellent penatoque in antesque
+                <p class="text-blog">
+                    <a class="green-text">@namehere</a> Justoid nonummy laoreet phasellent penatoque in antesque
                     pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut
                     vitae doloreet 1 day ago
                 </p>
-                <p>
-                    @namehere Justoid nonummy laoreet phasellent penatoque in antesque
+                <p class="text-blog">
+                    <a class="green-text">@namehere</a> Justoid nonummy laoreet phasellent penatoque in antesque
                     pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut
                     vitae doloreet 1 day ago
                 </p>
