--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 
-
 <header>
 
     <div class="logo">
@@ -28,23 +27,6 @@
             <li><a href="#gallery">GALLERY</a></li>
         </ul>
     </nav>
-
-        <input type="checkbox" id="nav-toggle" hidden>
-        <nav class="navi">
-            <label for="nav-toggle" class="nav-toggle" onclick></label>
-            <h2 class="logo">
-                <a href="//www.os-templates.com/free-psd-templates/the-modernist/">HOME</a>
-            </h2>
-            <ul>
-                <li><a href="#projects">HOME</a></li>
-                <li><a href="#about">STYLE DEMO</a></li>
-                <li><a href="#team">FULL WIDTH</a></li>
-                <li><a href="#dropdown">DROPDOWN</a></li>
-                <li><a href="#portfolio">PORTFOLIO</a></li>
-                <li><a href="#gallery">GALLERY</a></li>
-            </ul>
-        </nav>
-
     </div>
 
 </header>
@@ -62,14 +44,12 @@
                     Urnaultrices quis curabitur phasellentesque
                     congue magnis vestibulum quismodo nulla et
                     feugiat adipiscinia pellentum leo.
-
                 </p>
 
                 <button class="button-read">
                     Read More Here >>
                 </button>
 
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             </div>
         </div>
 
@@ -77,7 +57,6 @@
                 <div class="round">
                 <img class="img-slider" src="assets/cat.jpg" alt="">
             </div>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
 
@@ -209,7 +188,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="column">
-                            <form action="/action_page.php">
+                            <form >
 
                                 <input type="text" id="fname" name="firstname" placeholder="Full Mame">
                                 <input type="text" id="mail" name="email" placeholder="Email Address">
@@ -228,7 +207,7 @@
 
     <footer class="footer max-wigth">
         <div class="copyright">Copyright © 2013 Domain Name - All Rights Reserved</div>
-        <div>Template by OS Templates</div>
+        <div class="template">Template by OS Templates</div>
     </footer>
 
 </main>
