--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
     </nav>
     </div>
 
-    <div class="navig-mini">
-        <li><a href="#" class="down">Menu</a>
-            <ul class="submenu">
-                <li><a href="#home">home</a></li>
-                <li><a href="#service">service</a></li>
-                <li><a href="#works">works</a></li>
-                <li><a href="#contacts">about us</a></li>
-            </ul>
-    </div>
+
+    <nav class="navig-mini">
+        <input id="menu_toggle" type="checkbox">
+        <label class="menu_btn" for="menu_toggle"><span></span></label>
+        <ul class="menu_box">
+            <li><a class="menu_item" href="#">home</a></li>
+            <li><a class="menu_item" href="#">service</a></li>
+            <li><a class="menu_item" href="#">works</a></li>
+            <li><a class="menu_item" href="#">about us</a></li>
+        </ul>
+    </nav>
 
 </header>
 <main>
@@ -158,7 +160,6 @@
             </div>
             </div>
         </div>
-
     </section>
 
     <section class="about-us max-wigth" id="contacts">
@@ -178,7 +179,6 @@
                 <button class="button-read-about" >
                     <a href="https://www.onliner.by"> Read More >></a>
                 </button>
-
             </div>
 
             <div class="about">
@@ -206,12 +206,10 @@
                     pellus elis eget tincidunt. Nequatdui laorem justo a non tellus laoremut
                     vitae doloreet 1 day ago
                 </p>
-
             </div>
 
             <div class="about">
                 <p class="title-about">Contact Us</p>
-
                 <div class="container">
                     <div class="row">
                         <div class="column">
@@ -219,13 +217,12 @@
                                 <input type="text" id="fname" name="firstname" placeholder="Full Mame">
                                 <input type="text" id="mail" name="email" placeholder="Email Address">
                                 <input type="text" id="sub" name="subject" placeholder="Subject">
-                                <textarea id="message" name="message" placeholder="Message" ></textarea>
+                                <textarea id="message" name="message" placeholder="Message" style="height:70px" ></textarea>
                                 <input type="submit" value="SUBMIT">
                             </form>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
